# TinkerLibrary

./: .gitignore  CMakeLists.txt  README.md
TinkerLibrary/: BitMasks.hpp  BitOptions.hpp  ByteSwapper.hpp  BytesPrinter.hpp  C++Support.cpp  ClosedRange.hpp  Comparable.hpp  Debug.hpp  Decrementable.hpp  Equatable.hpp  Experiments.hpp  Hashable.hpp  Incrementable.hpp  LinkedList.hpp  Listable.hpp  Memory.c  Memory.h  Print.c  Print.h  SignificantBit.hpp  StaticBitVector.hpp  TestSuite.hpp  Types.hpp
TinkerLibrary.xcodeproj/: project.pbxproj
TinkerLibraryPlayground/: main.cpp
TinkerLibraryTests/: BitMasksTest.cpp  BitMasksTest.hpp  BitOptionsTest.cpp  BitOptionsTest.hpp  LinkedListTest.cpp  LinkedListTest.hpp  SignificantBitTest.cpp  SignificantBitTest.hpp  StaticBitVectorTest.cpp  StaticBitVectorTest.hpp  TinkerLibraryTests.hpp  main.cpp
